WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199278
Regression(
r246526
): StorageManager thread hangs
https://bugs.webkit.org/show_bug.cgi?id=199278
Summary
Regression(r246526): StorageManager thread hangs
Sihui Liu
Reported
2019-06-27 10:55:45 PDT
getOrCreateLocalStorageNamespace acquires lock m_localStorageNamespacesMutex when m_localStorageNamespacesMutex is already acquired.
Attachments
Patch
(11.86 KB, patch)
2019-06-27 11:16 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2019-06-27 10:56:13 PDT
<
rdar://problem/52202948
>
Sihui Liu
Comment 2
2019-06-27 11:16:37 PDT
Created
attachment 373039
[details]
Patch
Geoffrey Garen
Comment 3
2019-06-27 11:36:18 PDT
Comment on
attachment 373039
[details]
Patch r=me Can we add a test for this?
WebKit Commit Bot
Comment 4
2019-06-27 13:46:29 PDT
Comment on
attachment 373039
[details]
Patch Clearing flags on attachment: 373039 Committed
r246901
: <
https://trac.webkit.org/changeset/246901
>
WebKit Commit Bot
Comment 5
2019-06-27 13:46:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug